<resources>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="proceed">Proceed</string>
    <string name="frenn_registered_mobile_number">Frenn Registered Mobile Number</string>
    <string name="payment_is_secured_by_frenn">Payment is secured by Frenn.</string>
    <string name="type_here">Type here</string>
    <string name="enter_bvn_number">Enter BVN Number</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="sub_total">Sub Total:</string>
    <string name="n15_000">N15,000</string>
    <string name="existing_frenn_user">Existing Frenn User</string>
    <string name="new_user">New User</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait_checking_your_credit_limit">Please wait..checking your credit limit</string>
    <string name="enter_otp_sent_to_0879877xxxx">Enter OTP Sent To 0879877xxxx</string>
    <string name="scheduled_payment_details">Scheduled payment details</string>
    <string name="frenn_pay_in_30_days">Frenn Pay in 30 Days</string>
    <string name="you_need_to_pay_the_due_amount_after_30_days">You need to pay the due amount after 30 days.</string>
    <string name="next_re_payment_date">Next re-payment date:</string>
    <string name="_02_03_2022">02-03-2022</string>
</resources>