<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/frenn_registered_mobile_number"
        android:textColor="#2D2D3D"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_proceed"
        android:layout_width="0dp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/proceed"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/securePayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_twemoji_flag_for_flag_nigeria"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="phone"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <TextView
        android:id="@+id/securePayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_5sdp"
        android:text="@string/payment_is_secured_by_frenn"
        android:drawableStart="@drawable/ic_dashicons_lock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>