<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.OtpFragment">

    <TextView
        android:id="@+id/sendOtpMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp_sent_to_0879877xxxx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mfb.frennpaylibrary.views.OtpEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:digits="1234567890"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendOtpMessage" />

    <Button
        android:id="@+id/button_proceed"
        android:layout_width="0dp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/proceed"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/securePayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/securePayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_dashicons_lock"
        android:drawablePadding="@dimen/_5sdp"
        android:text="@string/payment_is_secured_by_frenn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>