<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F4FA"
    android:paddingLeft="@dimen/_20sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingRight="@dimen/_20sdp"
    android:paddingBottom="@dimen/_10sdp">

    <TextView
        android:id="@+id/textviewBvn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/enter_bvn_number"
        android:textColor="#2D2D3D"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_proceed"
        android:layout_width="0dp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/proceed"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/securePayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutBvn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@android:color/white"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewBvn">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bvn" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="#BDBCBC" />

        <EditText
            android:id="@+id/editTextBvn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="@dimen/_10sdp"
            android:ems="10"
            android:inputType="number"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_10sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textviewEmail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/enter_email_address"
        android:textColor="#2D2D3D"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutBvn" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@android:color/white"
        android:drawablePadding="@dimen/_10sdp"
        android:ems="10"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewEmail" />

    <TextView
        android:id="@+id/textviewDOB"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/enter_date_of_birth"
        android:textColor="#2D2D3D"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutDOB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@android:color/white"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewDOB">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bi_calendar2_date" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="#BDBCBC" />

        <EditText
            android:id="@+id/editTextDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="@dimen/_10sdp"
            android:ems="10"
            android:inputType="number"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_10sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/securePayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:drawablePadding="@dimen/_5sdp"
        android:text="@string/payment_is_secured_by_frenn"
        android:drawableStart="@drawable/ic_dashicons_lock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>